--- a/app/app/views/jingles/show.html.erb
+++ b/app/app/views/jingles/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Audio path:</strong>
-  <%= @jingle.audio_path %>
+  <strong>Audio:</strong>
+  <%= @jingle.audio_url %>
 </p>
 
 <%= link_to 'Edit', edit_jingle_path(@jingle) %> |
