--- a/app/app/views/jingles/show.html.erb
+++ b/app/app/views/jingles/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Audio:</strong>
-  <%= @jingle.audio_url %>
+  <%= @jingle.audio_url.to_s %>
 </p>
 
 <%= link_to 'Edit', edit_jingle_path(@jingle) %> |
