add remove button to jingles in playlist

--- a/app/app/views/playlist_management/_playlist.html.erb
+++ b/app/app/views/playlist_management/_playlist.html.erb
@@ -19,7 +19,7 @@
 					<div>Time left: <%= entry.time_left_human %></div>
 					<% if !entry.isLive? %>
 						<div><%= link_to 'Remove', {controller: 'playlist_management', action: 'destroy_entry', remote: true, playlist_entry_id: entry.id, channel_playlist: @channel_playlist.id}, class: 'button alert tiny'%></div>
-					<% end %>		
+					<% end %>
 			      </td>
 			   <% else %>
 			   	<td> <i class="fa fa-music"></i> </td>
@@ -28,6 +28,9 @@
 					<div><%= entry.start_time %></div>
 					<div><%= entry.end_time %></div>
 					<div>Time left: <%= entry.time_left_human %></div>
+					<% if !entry.isLive? %>
+						<div><%= link_to 'Remove', {controller: 'playlist_management', action: 'destroy_entry', remote: true, playlist_entry_id: entry.id, channel_playlist: @channel_playlist.id}, class: 'button alert tiny'%></div>
+					<% end %>
 			   	</td>
 			   <% end %>
 		    <% end %>
