some basic design of jingle management

--- a/app/app/views/jingles/edit.html.erb
+++ b/app/app/views/jingles/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing jingle</h1>
+<div class="row">
+	<div class="medium-6 large-centered columns">
+		<h1>Editing jingle</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
 
-<%= link_to 'Show', @jingle %> |
-<%= link_to 'Back', jingles_path %>
+	</div>
+</div>
+
