--- a/app/app/views/jingles/index.html.erb
+++ b/app/app/views/jingles/index.html.erb
@@ -1,31 +1,35 @@
-<h1>Listing jingles</h1>
+<div class="row">
+	<div class="medium-12 columns">
+		
+		<h1>Jingle Management</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Duration</th>
-      <th>Audio</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+		<table>
+			<thead>
+				<tr>
+					<th>Title</th>
+					<th>Duration</th>
+					<th>Audio</th>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
 
-  <tbody>
-    <% @jingles.each do |jingle| %>
-      <tr>
-        <td><%= jingle.title %></td>
-        <td><%= jingle.duration %></td>
-        <td><%= jingle.audio_url.to_s %></td>
-        <td><%= link_to 'Show', jingle %></td>
-        <td><%= link_to 'Edit', edit_jingle_path(jingle) %></td>
-        <td><%= link_to 'Destroy', jingle, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+			<tbody>
+				<% @jingles.each do |jingle| %>
+				<tr>
+					<td><%= link_to jingle.title, jingle %></td>
+					<td><%= jingle.duration %></td>
+					<td><%= jingle.audio_url.to_s %></td>
+					<td><%= link_to 'Edit', edit_jingle_path(jingle), class: 'button tiny' %></td>
+					<td><%= link_to 'Destroy', jingle, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button tiny alert' %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
 
-<br>
+		<br>
 
-<%= link_to 'New Jingle', new_jingle_path %>
+		<%= link_to 'New Jingle', new_jingle_path, class: 'button' %>
+	</div>
+</div>
+
