--- a/app/app/views/jingles/new.html.erb
+++ b/app/app/views/jingles/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New jingle</h1>
+<div class="row">
+	<div class="medium-6 large-centered columns">
+		<h1>New jingle</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+	</div>
+</div>
 
-<%= link_to 'Back', jingles_path %>
