--- a/app/app/views/podcasts/edit.html.erb
+++ b/app/app/views/podcasts/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing podcast</h1>
+<div class="row">
+	<div class="medium-9 columns large-centered">
+		
+		<h1>Editing podcast</h1>
 
-<%= render 'edit_form' %>
+		<%= render 'edit_form' %>
+	</div>
+</div>
 
-<%= link_to 'Show', @podcast %> |
-<%= link_to 'Back', podcasts_path %>
