--- a/app/app/views/podcasts/_edit_form.html.erb
+++ b/app/app/views/podcasts/_edit_form.html.erb
@@ -52,6 +52,10 @@
     <%= f.text_field :category %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <ul class="button-group">
+      <li><%= f.submit 'Save' , class: 'button'%></li>
+      <li><%= link_to 'Cancel', @podcast, class: 'button alert' %></li>
+      </ul>
+    
   </div>
 <% end %>
