--- a/app/app/views/podcasts/new.html.erb
+++ b/app/app/views/podcasts/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New podcast</h1>
+<div class="row">
+	<div class="medium-8 columns large-centered">
+		
+		<h1>Subscribe to new podcast</h1>
 
-<%= render 'new_form' %>
+		<%= render 'new_form' %>		
+	</div>
+</div>
 
-<%= link_to 'Back', podcasts_path %>
