add mpd socket path to channel playlist views

--- a/app/app/views/channel_playlists/_form.html.erb
+++ b/app/app/views/channel_playlists/_form.html.erb
@@ -30,8 +30,12 @@
   <div class="field">
     <%= f.label :stream_url %><br>
     <%= f.text_field :stream_url %>
-  </div>  
+  </div> 
+  <div> 
+    <%= f.label :mpd_socket_path %><br>
+    <%= f.text_field :mpd_socket_path %>
+  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Save', class: 'button' %>
   </div>
 <% end %>
