--- a/app/app/views/channel_playlists/show.html.erb
+++ b/app/app/views/channel_playlists/show.html.erb
@@ -23,6 +23,11 @@
 <p>
   <strong>Stream URL:</strong>
   <%= @channel_playlist.stream_url %>
+ </p>
+ 
+ <p>
+  <strong>MPD Socket Path:</strong>
+  <%= @channel_playlist.mpd_socket_path %>
 </p>
 
 <%= link_to 'Edit', edit_channel_playlist_path(@channel_playlist) %> |
