--- a/app/app/views/channel_playlists/_form.html.erb
+++ b/app/app/views/channel_playlists/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :language %><br>
     <%= f.text_field :language %>
   </div>
+  <div class="field">
+    <%= f.label :stream_url %><br>
+    <%= f.text_field :stream_url %>
+  </div>  
   <div class="actions">
     <%= f.submit %>
   </div>
