nested routing for podcast / episodes and enable shallow routing update links / actions

--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -67,7 +67,7 @@
 
 		<h2>All episodes of this podcast</h2>
 
-		<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update_feed', id: @podcast.id}, class: 'button success'%>
+		<%= link_to 'Check for new Episodes', {controller: 'podcasts', action: 'update', id: @podcast.id}, class: 'button success'%>
 		<%= link_to 'Delete All Episodes', {controller: 'podcasts', action: 'delete_all_episodes', id: @podcast.id}, class: 'button alert' %>
 		<%= link_to 'Download All Episodes', {controller: 'podcasts', action: 'download_all_episodes', id: @podcast.id}, class: 'button' %>
 		
