--- a/app/app/views/layouts/_navigation.html.erb
+++ b/app/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
 				<%= link_to 'Schedule', schedule_path %>
 				<ul class="dropdown">
 					<% ChannelPlaylist.all.each do |channel_playlist| %>
-						<li><%= link_to channel_playlist.name, schedule_show_path(channel_playlist: channel_playlist.id) %></li>
+						<li><%= link_to channel_playlist.name, schedule_show_path(channel_playlist_id: channel_playlist.id) %></li>
 					<% end %>
 				</ul>
 			</li>
@@ -33,7 +33,7 @@
 				<%= link_to 'Channel Management', channel_playlists_path %>
 				<ul class="dropdown">
 					<% ChannelPlaylist.all.each do |channel_playlist| %>
-						<li><%= link_to channel_playlist.name, playlist_management_path(channel_playlist: channel_playlist.id) %></li>
+						<li><%= link_to channel_playlist.name, playlist_management_path(channel_playlist_id: channel_playlist.id) %></li>
 					<% end %>
 					<li><%= link_to 'New Channel', new_channel_playlist_path %></li>
 				</ul>
