css per controller

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -7,12 +7,11 @@
 
 <div class="row">
 	<div class="medium-4 columns">
-		<div id="playlist" style="height: 600px; overflow-y: scroll">
+		<div id="playlist">
 			<%= render 'playlist' %>
 		</div>
 	</div>
 	<div class="medium-8 columns">
-
 
 		<dl class="tabs" data-tab>
 			<dd class="active"><a href="#panel2-1">Podcast Episodes</a></dd>
@@ -44,7 +43,6 @@
 				</div>
 
 				<div id="results"><%= render 'results' %></div>
-
 
 			</div>
 			<div class="content" id="panel2-2">
