--- a/app/app/assets/stylesheets/playlist_management.css.scss
+++ b/app/app/assets/stylesheets/playlist_management.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the PlaylistManagement controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#playlist {
+	height: 800px;
+	overflow-y: scroll;
+}
