playlist tables should always use full available width

--- a/app/app/assets/stylesheets/playlist_management.css.scss
+++ b/app/app/assets/stylesheets/playlist_management.css.scss
@@ -9,6 +9,9 @@
 
 #immutable-entries-table {
 	border-color: red;
+	width: 100%;
 }
 
-#changeable-entries-table {}
+#changeable-entries-table {
+	width: 100%;
+}
