increase size of jingle icon

--- a/app/app/views/playlist_management/_playlist_entry.html.erb
+++ b/app/app/views/playlist_management/_playlist_entry.html.erb
@@ -11,7 +11,7 @@
 	</td>
 
 <% else %>
-	<td> <i class="fa fa-music handle"></i> </td>
+	<td> <i class="fa fa-bullhorn handle fa-4x"></i> </td>
 	<td>
 		<h6><%= entry.jingle.title %></h6>
 		<div><%= entry.start_time %></div>
