add icons for podcast / jingle tabs in playlist management

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -14,8 +14,8 @@
 	<div class="medium-8 columns">
 
 		<dl class="tabs" data-tab>
-			<dd class="active"><a href="#panel2-1">Podcast Episodes</a></dd>
-			<dd><a href="#panel2-2">Jingles</a></dd>
+			<dd class="active"><a href="#panel2-1"><i class="fa fa-volume-up handle fa-lg"></i> Podcast Episodes</a></dd>
+			<dd><a href="#panel2-2"><i class="fa fa-bullhorn handle fa-lg"></i> Jingles</a></dd>
 		</dl>
 		<div class="tabs-content">
 			<div class="content active" id="panel2-1">
