--- a/app/app/views/episodes/show.html.erb
+++ b/app/app/views/episodes/show.html.erb
@@ -42,7 +42,7 @@
 
 		<p>
 			<strong>Icon url:</strong>
-			<%= @episode.icon_url_podcast_fallback %>
+			<%= @episode.icon_url %>
 		</p>
 
 		<p>
