--- a/app/app/views/directory/_episodes.html.erb
+++ b/app/app/views/directory/_episodes.html.erb
@@ -5,7 +5,7 @@
 	<% @episodes.each do |episode| %>
 	<li>
 		<a href="<%= directory_show_episode_url(episode.id) %>">
-			<img src="<%= episode.icon_url_podcast_fallback %>" />
+			<%= image_tag episode.coverart.thumb_400 %>
 		</a>
 		<h5><%= episode.title %></h5>
 	</li>
