--- a/app/app/views/directory/show_episode.html.erb
+++ b/app/app/views/directory/show_episode.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="medium-3 columns">
-		<img src="<%= @episode.icon_url_podcast_fallback %>" />
+		<%= image_tag @episode.coverart.thumb_400 %>
 	</div>
 	<div class="medium-9 columns">
 		<h1><%= @episode.title %></h1>
