--- a/app/app/views/directory/show_podcast.html.erb
+++ b/app/app/views/directory/show_podcast.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="medium-3 columns">
-		<img src="<%= @podcast.logo_url %>" />
+		<%= image_tag @podcast.coverart.thumb_400 %>
 	</div>
 	<div class="medium-9 columns">
 		<h1><%= @podcast.title %></h1>
