--- a/app/app/views/playlist_management/_results.html.erb
+++ b/app/app/views/playlist_management/_results.html.erb
@@ -18,7 +18,7 @@
 	<tbody>
 		<% @episodes.each do |episode| %>
 		<tr>
-			<td width="80"><%= image_tag episode.icon_url_podcast_fallback, size: '80' %></td>
+			<td width="80"><%= image_tag episode.coverart.thumb_200, size: '80' %></td>
 			<td><%= link_to episode.title, episode %></td>
 			<td><%= episode.duration %></td>
 			<td><%= episode.pub_date %></td>
