--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
 	<div class="medium-3 columns">
-		<%= image_tag @podcast.logo_url %>
+		<%= image_tag @podcast.coverart.thumb_400 %>
 		<%= link_to 'Edit', edit_podcast_path(@podcast), class: 'button', style: 'width: 100%' %>
 	</div>
 	<div class="medium-9 columns">
