--- a/app/app/views/schedule/_episodes.html.erb
+++ b/app/app/views/schedule/_episodes.html.erb
@@ -5,7 +5,7 @@
 		<% @playlist_entries.each do |entry| %>
 			<% if entry.is_episode? %>
 				<div class="medium-3 columns">
-					<%= image_tag entry.episode.icon_url_podcast_fallback%>
+					<%= image_tag entry.episode.coverart.thumb_400%>
 					<div><%= entry.start_time %></div>
 					<div><%= entry.end_time %></div>
 					<div>Time left: <%= entry.time_left_human %></div>
