update all usages of local_path to new carrierwave style

--- a/app/app/views/episodes/_form.html.erb
+++ b/app/app/views/episodes/_form.html.erb
@@ -60,8 +60,8 @@
     <%= f.check_box :cached %>
   </div>
   <div class="field">
-    <%= f.label :local_path %><br>
-    <%= f.text_field :local_path %>
+    <%= f.label :audio %><br>
+    <%= f.text_field :audio %>
   </div>
   <div class="actions">
     <%= f.submit %>
