--- a/app/app/views/episodes/show.html.erb
+++ b/app/app/views/episodes/show.html.erb
@@ -56,8 +56,8 @@
 		</p>
 
 		<p>
-			<strong>Local path:</strong>
-			<%= @episode.local_path %>
+			<strong>Audio:</strong>
+			<%= @episode.audio_url %>
 		</p>
 		<%= link_to 'Edit', edit_episode_path(@episode), class: 'button' %>
 
