fix problem with JS interval ajax updates. problem was: rails 4 uses turbolinks that do AJAX page reload on every link clicked. this however keeps intervals present. added check in intervals that their data-update-url is really present and only fetch content if it is so.

--- a/app/app/views/playlist_management/_playlist.html.erb
+++ b/app/app/views/playlist_management/_playlist.html.erb
@@ -12,7 +12,7 @@
 		</tbody>
 	</table>
 
-	<table id="changeable-entries-table" data-update-url="<%= sort_playlist_entries_url(offset: @offset, channel_playlist_id: @channel_playlist.id) %>">
+	<table id="changeable-entries-table" data-post-sort-url="<%= sort_playlist_entries_url(offset: @offset, channel_playlist_id: @channel_playlist.id) %>">
 		<tbody id="playlist-entry-list">
 				<% @changeable_entries.each do |entry| %>
 					<%= content_tag_for :tr, entry do %>
