do not save episode.cached. just check if audio is present

--- a/app/app/views/playlist_management/index.html.erb
+++ b/app/app/views/playlist_management/index.html.erb
@@ -34,7 +34,7 @@
 							</div>
 							<div class="row">
 								<div class="medium-12 columns">
-									<%= f.check_box :cached_true %>
+									<%= f.check_box :audio_present %>
 									<%= f.label 'Only show cashed episodes' %>
 								</div>
 							</div>
