--- a/app/app/views/devise/registrations/new.html.erb
+++ b/app/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <h2>Sign up</h2>
+<p>Test</p>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -15,4 +16,4 @@
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
-<%= render "admins/shared/links" %>
+<%= render "devise/shared/links" %>
