--- a/app/app/views/channel_playlists/edit.html.erb
+++ b/app/app/views/channel_playlists/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing channel_playlist</h1>
+<div class="row">
+	<div class="medium-8 columns large-centered">
+		
+		<h1>Editing channel_playlist</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+				
+	</div>
+</div>
 
-<%= link_to 'Show', @channel_playlist %> |
-<%= link_to 'Back', channel_playlists_path %>
