--- a/app/app/views/channel_playlists/new.html.erb
+++ b/app/app/views/channel_playlists/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New channel_playlist</h1>
+<div class="row">
+	<div class="medium-8 columns large-centered">
+		
+		<h1>New channel_playlist</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+		
+	</div>
+</div>
 
-<%= link_to 'Back', channel_playlists_path %>
