--- a/app/app/views/schedule/_episodes.html.erb
+++ b/app/app/views/schedule/_episodes.html.erb
@@ -3,12 +3,18 @@
 <% else %>
 	<% @playlist_entries.each do |entry| %>
 		<% if entry.is_episode? %>
-			<div class="row">
+			<div class="row playlist-entry">
 				<div class="medium-3 columns">
 					<%= image_tag entry.episode.coverart.thumb_400%>
 					<div><%= entry.start_time %></div>
 					<div><%= entry.end_time %></div>
-					<div>Time left: <%= entry.time_left_human %></div>
+					
+					<% if entry.is_live? %>
+						<div>Time left: <%= entry.time_left_human %></div>
+						<div class="progress">
+							<span class="meter" style="width: <%= entry.percent_left %>%"></span>
+						</div>
+					<% end %>
 				</div>
 				<div class="medium-9 columns">
 
