--- a/app/app/assets/stylesheets/schedule.css.scss
+++ b/app/app/assets/stylesheets/schedule.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the ScheduleController controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.row.playlist-entry {
+	margin-bottom: 1em;
+}
