fix mail messages. basic content created.

--- a/app/app/views/admin_mailer/new_admin_waiting_for_approval.html.erb
+++ b/app/app/views/admin_mailer/new_admin_waiting_for_approval.html.erb
@@ -1,2 +1,2 @@
 <h3>Welcome</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, at, eum, est, nobis laboriosam in architecto voluptates aspernatur porro exercitationem suscipit aut recusandae pariatur earum autem odit dignissimos debitis nesciunt!</p>
+<p>Your account has been created successfully and is waiting for approval. You will receive a confirmation message as soon as your account has been approved.</p>
