--- a/app/app/views/admin_mailer/admin_approved.html.erb
+++ b/app/app/views/admin_mailer/admin_approved.html.erb
@@ -1,3 +1,3 @@
 <h3>Welcome</h3>
-<p>You have been approved</p>
+<p>You have been approved. You can now login with the link below.</p>
 <%= link_to('Login', new_admin_session_path)  %> 
