--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -14,27 +14,14 @@
 
 	<body>
 
-	<%= render 'layouts/navigation' %>	
+		<%= render 'layouts/navigation' %>	
 
-		<!-- FLASH MESSAGES -->
-		<% if !flash.blank? %>
-		<div class="row">
-			<div class="medium-12 columns">
-				<!-- TODO add alert and notice for devise -->
-				<% if flash[:error] %>
-					<div class="alert-box alert"><%= flash[:error] %></div>
-				<% end %>
-				<% if flash[:success] %>
-					<div class="alert-box success"><%= flash[:success] %></div>
-				<% end %>
-				<% if flash[:notice] %>
-					<div class="alert-box"><%= flash[:notice] %></div>
-				<% end %>
-			</div>
+		<div id="flash-messages">		
+			<%= render 'layouts/flash_messages' %>
 		</div>
-		<% end %>
 
 		<%= yield %>
+		
 		<%= javascript_include_tag "application" %>
 		<%= javascript_include_tag params[:controller] %>
 	</body>
