--- a/app/app/views/layouts/_flash_messages.html.erb
+++ b/app/app/views/layouts/_flash_messages.html.erb
@@ -3,13 +3,22 @@
 		<div class="medium-12 columns">
 			<!-- TODO add alert and notice for devise -->
 			<% if flash[:error] %>
-				<div class="alert-box alert"><%= flash[:error] %></div>
+				<div class="alert-box alert">
+					<%= flash[:error] %>
+					<a href="#" class="close">&times;</a>
+				</div>
 			<% end %>
 			<% if flash[:success] %>
-				<div class="alert-box success"><%= flash[:success] %></div>
+				<div class="alert-box success">
+					<%= flash[:success] %>
+					<a href="#" class="close">&times;</a>
+				</div>
 			<% end %>
 			<% if flash[:notice] %>
-				<div class="alert-box"><%= flash[:notice] %></div>
+				<div class="alert-box">
+					<%= flash[:notice] %>
+					<a href="#" class="close">&times;</a>
+				</div>
 			<% end %>
 		</div>
 	</div>
