--- a/app/app/views/episodes/show.html.erb
+++ b/app/app/views/episodes/show.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
 	<div class="medium-12 columns">
+
+		<%= image_tag @episode.coverart.thumb_400 %>
 		
 		<p>
 			<strong>Title:</strong>
