--- a/app/app/views/directory/show_podcast.js.erb
+++ b/app/app/views/directory/show_podcast.js.erb
@@ -1,2 +1,3 @@
 $('#results-episodes').html('<%= escape_javascript(render "episodes") %>');
+$('#flash-messages').html('<%= escape_javascript(render "layouts/flash_messages") %>');
 $('.pagination a').attr('data-remote', 'true');
