--- a/app/app/views/playlist_management/_results.html.erb
+++ b/app/app/views/playlist_management/_results.html.erb
@@ -23,7 +23,7 @@
 			<td><%= episode.duration %></td>
 			<td><%= episode.pub_date %></td>
 			<td><%= episode.playcount %></td>
-			<td><%= episode.last_played %></td>
+			<td><%= episode.time_since_last_played %></td>
 			<td>
 				<% if episode.cached? %>
 				<%= link_to controller: 'playlist_management', action: 'append_entry', remote: true, episode_id: episode.id, channel_playlist_id: @channel_playlist.id do%><i class="fa fa-plus-circle"></i><% end %>
