use tagging everywhere it was before

--- a/app/app/views/episodes/_form.html.erb
+++ b/app/app/views/episodes/_form.html.erb
@@ -44,8 +44,8 @@
     <%= f.text_field :flattr_url %>
   </div>
   <div class="field">
-    <%= f.label :tags %><br>
-    <%= f.text_field :tags %>
+    <%= f.label 'tags (comma separated)' %><br>
+    <%= f.text_field :tag_list %>
   </div>
   <div class="field">
     <%= f.label :icon_url %><br>
