--- a/app/app/views/podcasts/_edit_form.html.erb
+++ b/app/app/views/podcasts/_edit_form.html.erb
@@ -44,12 +44,12 @@
     <%= f.text_field :feed %>
   </div>
   <div class="field">
-    <%= f.label :tags %><br>
-    <%= f.text_field :tags %>
+    <%= f.label 'tags (comma separated)' %><br>
+    <%= f.text_field :tag_list %>
   </div>
   <div class="field">
-    <%= f.label :category %><br>
-    <%= f.text_field :category %>
+    <%= f.label 'categories (comma separated)' %><br>
+    <%= f.text_field :category_list %>
   </div>
   <div class="actions">
     <ul class="button-group">
