--- a/app/app/views/podcasts/show.html.erb
+++ b/app/app/views/podcasts/show.html.erb
@@ -48,12 +48,12 @@
 
 				<tr>
 					<td><strong>Tags:</strong></td>
-					<td><%= @podcast.tags %></td>
+					<td><%= @podcast.tag_list %></td>
 				</tr>
 
 				<tr>
 					<td><strong>Category:</strong></td>
-					<td><%= @podcast.category %></td>
+					<td><%= @podcast.category_list %></td>
 				</tr>
 			</tbody>
 		</table>
