--- a/app/app/views/layouts/_navigation.html.erb
+++ b/app/app/views/layouts/_navigation.html.erb
@@ -52,6 +52,16 @@
 					<% end %>
 				</ul>
 			</li>
+			<li class="has-dropdown">
+				<a href="#">Info</a>
+				<ul class="dropdown">
+					<li><%= link_to 'About', about_url %></li>
+					<li><%= link_to 'Support', support_url %></li>
+					<li><%= link_to 'FAQ', faq_url %></li>
+					<li><%= link_to 'Downloads', downloads_url %></li>
+				</ul>
+			</li>
+			<li><%= link_to 'Chat', chat_url %></li>
 		</ul>
 	</section>
 </nav>
