coverart for each channel

--- a/app/app/views/channel_playlists/_form.html.erb
+++ b/app/app/views/channel_playlists/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :language %>
   </div>
   <div class="field">
+    <%= f.label :coverart %><br>
+    <%= f.file_field :coverart %>
+  </div>
+  <div class="field">
     <%= f.label :stream_url %><br>
     <%= f.text_field :stream_url %>
   </div> 
