--- a/app/app/views/schedule/index.html.erb
+++ b/app/app/views/schedule/index.html.erb
@@ -5,6 +5,7 @@
 		<ul class="small-block-grid-3">
 			<% @channel_playlists.each do |channel_playlist| %>
 			<li>
+				<%= image_tag channel_playlist.coverart.thumb_400 %>
 				<h2><%= channel_playlist.name %></h2>
 				<p><%= channel_playlist.description %></p>
 				<p>Manager: <%= channel_playlist.author %></p>
