use one single toggle button to play and pause the stream

--- a/app/app/assets/stylesheets/schedule.css.scss
+++ b/app/app/assets/stylesheets/schedule.css.scss
@@ -5,3 +5,11 @@
 div.row.playlist-entry {
 	margin-bottom: 1em;
 }
+
+span.button.playing{
+	background-color: #006c90;
+}
+
+span.button.paused{
+	background-color: #008CBA;
+}
