--- a/app/app/views/layouts/_navigation.html.erb
+++ b/app/app/views/layouts/_navigation.html.erb
@@ -46,7 +46,7 @@
 				<ul class="dropdown">
 					<li><%= link_to 'Übersicht', schedule_path %></li>
 					<% ChannelPlaylist.all.each do |channel_playlist| %>
-						<li><%= link_to channel_playlist.name, schedule_show_path(channel_playlist_id: channel_playlist.id) %></li>
+						<li><%= link_to channel_playlist.name, schedule_show_path(channel_playlist_id: channel_playlist.id), data: { no_turbolink: true }%></li>
 					<% end %>
 				</ul>
 			</li>
