--- a/app/app/views/schedule/show.html.erb
+++ b/app/app/views/schedule/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="medium-12 columns">
 		
+		<%= image_tag @channel_playlist.coverart %>
 		<h1><%= @channel_playlist.name %></h1>
 		<p><%= @channel_playlist.description %></p>
 		<audio id="stream">
